# Python-interpreter-on-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp  myPython_ru_BY.xml
headers/: Environment.h  Interpreter.h  Lexer.h  Parser.h  Value.h
sources/: Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Value.cpp
